--- a/assets/header.css
+++ b/assets/header.css
@@ -7,9 +7,40 @@
 /*    }*/
 
 body {
-  background-color: white;
+  background-color: black;
 }
-
 .checkbox {
   column-count: 2;
+}
+
+.Select-control {
+  background-color: rgb(25, 25, 25) !important;
+}
+
+.Select-menu-outer {
+  background-color: rgb(25, 25, 25);
+}
+
+.Select--multi .Select-value {
+  background-color: green;
+  border-color: #e3a700;
+  color: orange;
+}
+.Select-control {
+  background-color: rgb(25, 25, 25) !important;
+}
+
+.Select-menu-outer {
+  background-color: rgb(25, 25, 25);
+}
+
+.VirtualizedSelectOption {
+  background-color: LightGreen;
+  color: black;
+}
+
+.VirtualizedSelectFocusedOption {
+  background-color: green;
+  font-size: 18px;
+  color: white;
 }
